trunk/tests/kiama/negative/type_errors/L4/7_badarray9.ob
MODULE badarray9;

VAR
    array2 : ARRAY 26 OF BOOLEAN;
    
BEGIN
    array2[100] := TRUE
END badarray9.
